# pauza-level-up

./: .gitignore  .vercelignore  README.md  build-installer.bat  electron-builder.yml  index.html  metadata.json  package-lock.json  package.json  start.bat  start.sh
.claude/: settings.local.json
electron/: main.cjs
installer-windows/: CREARE-INSTALLER.bat  PauzaLevelUp.iss  create-icon.ps1  create-portable.bat  launcher.vbs
public/: manifest.json  sw.js
scripts/: generate-icons.cjs  generate-tauri-icons.cjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Mascot.tsx
src/data/: games.ts  powerups.ts
