[package]
name = "pauza-level-up"
version = "1.0.0"
description = "Aplicatie educationala pentru pauze scolare incluzive si interactive"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"
